added absolute position on loader, so it appears in front of timeline during load

--- a/local_example.css
+++ b/local_example.css
@@ -8,7 +8,10 @@ html  {}
 #ft {padding-bottom: 1em;}
 #bd div.yui-g {margin: 2em;}
 p {margin-top: .5em;}
-
+#loading {position: absolute;
+			left: 40%;
+			top: 180px;
+			}
 
 
 .footnotes {
